--- a/forfun.html
+++ b/forfun.html
@@ -1,6 +1,11 @@
 ﻿<!DOCTYPE html>
 <html>
     <head>
+
+      <script type="text/javascript">
+var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F69f9a8e097a1218542b7538b0d07f321' type='text/javascript'%3E%3C/script%3E"));
+</script>
      
       <title>企鹅5P现场视频细节曝光！</title>
       <meta charset="utf-8">
